--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hi this is Rabi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <table>
+        <head>
+            <tr>
+                <th>SL NO</th>
+                <th>TASK</th>
+                <th>DESCRIPTION</th>
+                <th>LINK</th>
+                <th>DATE</th>
+            </tr>
+        </head>
+        <body>
+            <tr>
+                <td>1</td>
+                <td>25th may</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </body>
+    </table>
+</body>
+</html>
