--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="style.css" href="">
 </head>
 <body>
     <table>
@@ -26,6 +27,7 @@
                 <td></td>
             </tr>
         </body>
+        <script src="site.js"></script>
     </table>
 </body>
 </html>
