--- a/index.html
+++ b/index.html
@@ -5,29 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    
+    <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <table class="tb">
-        <head>
-            <tr>
-                <th>SL NO</th>
-                <th>TASK</th>
-                <th>DESCRIPTION</th>
-                <th>LINK</th>
-                <th>DATE</th>
-            </tr>
-        </head>
-        <body>
-            <tr>
-                <td>1</td>
-                <td>25th may</td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </body>
-        <script src="site.js"></script>
-    </table>
+    <table class="tb"><head><tr>
+        <th>slno</th>
+        <th>Date</th>
+        <th>Task</th>
+        <th>Description</th>
+        <th>Link</th>
+    </tr></head>
+    <body>
+        <tr>
+            <td>1</td>
+            <td>26th May</td>
+            <td>Mentorpick</td>
+            <td>coding</td>
+            <td>hi.com</td>
+        </tr>
+    </body>
+</table>
 </body>
 </html>
