updated 29th may

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RABIKANT ELITE TASK</title>
     
     <link rel="stylesheet" href="style.css" >
 </head>
@@ -14,15 +14,68 @@
         <th>Date</th>
         <th>Task</th>
         <th>Description</th>
-        <th>Link</th>
+        <th>Questions</th>
     </tr></head>
     <body>
         <tr>
             <td>1</td>
-            <td>26th May</td>
-            <td>Mentorpick</td>
-            <td>coding</td>
-            <td>hi.com</td>
+            <td>26<sup>th</sup> May</td>
+            <td>Solve 4 problems from mentorpick</td>
+            <td>
+                <span>
+                    1. By traversing through string from 0 to string.lenght()/2 and match <br>
+                    2. sort both string and match <br>
+                    3. Used a vector of pairs and sort the vector. Then use 2 pointer technique to find sum <br>
+                </span>
+            </td>
+            <td>
+                <span>
+                    1. Case Insensitive Palindrome <br>
+                    2. Check Anagrams <br>
+                    3. Two Sum <br>
+                    4. Rotated Sorted Array Search <br>
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>27<sup>th</sup> May</td>
+            <td>Solve 4 problems from mentorpick</td>
+            <td>
+                <span>
+                    1. use 2 vectors, one for prefix product and other for suffix product. Then print product of both vectors <br>
+                    2. Use map for finding duplicates and 2 pointers to traverse through string <br>
+                    3. Push the opening brackets into stack and if a closing bracket comes then match with 'tos' then pop <br>
+                    4. Using recurssion merge 2 list
+                </span>
+            </td>
+            <td>
+                <span>
+                    1. Exclusion Product <br>
+                    2. Length of Longest SubStr with Distinct Chars <br>
+                    3. Balancing Parantheses <br>
+                    4. Merge Two Sorted Lists <br>
+                </span>
+            </td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>29 <sup>th</sup> May</td>
+            <td>Solve 4 problems in mentorpick</td>
+            <td>
+                <span>
+                    1. Construct a binary search tree and use the recurssion for finding Height <br>
+                    3. Construct a binary search tree and use 2d vector and queue for storing values levels wise, then print it 
+                </span>
+            </td>
+            <td>
+                <span>
+                    1. Height of BST <br>
+                    2. Lowest Common Ancestor <br>
+                    3. Level Order Traversal <br>
+                    4. Binary Tree Maximum Path Sum <br>
+                </span>
+            </td>
         </tr>
     </body>
 </table>
