upadted today resume building class

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RABIKANT ELITE TASK</title>
@@ -76,6 +77,13 @@
                     4. Binary Tree Maximum Path Sum <br>
                 </span>
             </td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>30<sup>th</sup>May</td>
+            <td>Resume build in class</td>
+            <td>Used some basic tags of Html and style tag</td>
+            <td><a href="/myresume.html">My resume</a></td>
         </tr>
     </body>
 </table>
