--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <td>30<sup>th</sup>May</td>
             <td>Resume build in class</td>
             <td>Used some basic tags of Html and style tag</td>
-            <td><a href="/myresume.html">My resume</a></td>
+            <td><a href="/myresume.html" onclick="window.open('myresume.html', '_self');">My resume</a></td>
         </tr>
     </body>
 </table>
