--- a/index.html
+++ b/index.html
@@ -20,70 +20,109 @@
     <body>
         <tr>
             <td>1</td>
-            <td>26<sup>th</sup> May</td>
+            <td>26<sup>th</sup>May</td>
             <td>Solve 4 problems from mentorpick</td>
             <td>
-                <span>
-                    1. By traversing through string from 0 to string.lenght()/2 and match <br>
-                    2. sort both string and match <br>
-                    3. Used a vector of pairs and sort the vector. Then use 2 pointer technique to find sum <br>
-                </span>
+                <ol>
+                    <li>By traversing through string from 0 to string.lenght()/2 and match</li>
+                    <li>sort both string and match</li>
+                    <li>Used a vector of pairs and sort the vector. Then use 2 pointer technique to find sum</li>
+                </ol>
             </td>
             <td>
-                <span>
-                    1. Case Insensitive Palindrome <br>
-                    2. Check Anagrams <br>
-                    3. Two Sum <br>
-                    4. Rotated Sorted Array Search <br>
-                </span>
+                <ol>
+                    <li>Case Insensitive Palindrome</li>
+                    <li>Check Anagrams</li>
+                    <li>Two Sum</li>
+                    <li>Rotated Sorted Array Search</li>
+                </ol>
             </td>
         </tr>
         <tr>
             <td>2</td>
-            <td>27<sup>th</sup> May</td>
+            <td>27<sup>th</sup>May</td>
             <td>Solve 4 problems from mentorpick</td>
             <td>
-                <span>
-                    1. use 2 vectors, one for prefix product and other for suffix product. Then print product of both vectors <br>
-                    2. Use map for finding duplicates and 2 pointers to traverse through string <br>
-                    3. Push the opening brackets into stack and if a closing bracket comes then match with 'tos' then pop <br>
-                    4. Using recurssion merge 2 list
-                </span>
+                <ol>
+                    <li>use 2 vectors, one for prefix product and other for suffix product. Then print product of both vectors</li>
+                    <li>Use map for finding duplicates and 2 pointers to traverse through string</li>
+                    <li>Push the opening brackets into stack and if a closing bracket comes then match with 'tos' then pop</li>
+                    <li>Using recurssion merge 2 list</li>
+                </ol>
             </td>
             <td>
-                <span>
-                    1. Exclusion Product <br>
-                    2. Length of Longest SubStr with Distinct Chars <br>
-                    3. Balancing Parantheses <br>
-                    4. Merge Two Sorted Lists <br>
-                </span>
+                <ol>
+                    <li>Exclusion Product</li>
+                    <li>Length of Longest SubStr with Distinct Chars</li>
+                    <li>Balancing Parantheses</li>
+                    <li>Merge Two Sorted Lists</li>
+                </ol>
             </td>
         </tr>
         <tr>
             <td>3</td>
-            <td>29 <sup>th</sup> May</td>
-            <td>Solve 4 problems in mentorpick</td>
+            <td>29<sup>th</sup>May</td>
+            <td>Solve 4 problems from mentorpick</td>
             <td>
-                <span>
-                    1. Construct a binary search tree and use the recurssion for finding Height <br>
-                    3. Construct a binary search tree and use 2d vector and queue for storing values levels wise, then print it 
-                </span>
+                <ol>
+                    <li>Construct a binary search tree and use the recurssion for finding Height</li>
+                    <li></li>
+                    <li>Construct a binary search tree and use 2d vector and queue for storing values levels wise, then print it</li>
+                </ol>
             </td>
             <td>
-                <span>
-                    1. Height of BST <br>
-                    2. Lowest Common Ancestor <br>
-                    3. Level Order Traversal <br>
-                    4. Binary Tree Maximum Path Sum <br>
-                </span>
+                <ol>
+                    <li>Height of BST</li>
+                    <li>Lowest Common Ancestor</li>
+                    <li>Level Order Traversal</li>
+                    <li>Binary Tree Maximum Path Sum</li>
+                </ol>
             </td>
         </tr>
         <tr>
             <td>4</td>
             <td>30<sup>th</sup>May</td>
             <td>Resume build in class</td>
-            <td>Used some basic tags of Html and style tag</td>
-            <td><a href="Resume/myresume.html">My resume</a></td>
+            <td><ol>
+                <li>Used some basic tags of Html and style tag</li>
+            </ol></td>
+            <td><ol>
+                <li><a href="Resume/myresume.html">My resume</a></li>
+            </ol></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>31<sup>st</sup>May</td>
+            <td>Solve 4 problems from mentorpick</td>
+            
+            <td>
+                <ol>
+                    <li>Checked using recuursion that both trees are identical or not</li>
+                    <li>Used 2 pointer technique to find the maxmimum area between 2 poll</li>
+                    <li>Construct 2 vector of equal size. One containing prefix max and other postfix min. Find the maximum difference between them.</li>
+                </ol>
+            </td>
+            <td>
+                <ol>
+                    <li>Are Trees Identical</li>
+                    <li>Container With Most Water</li>
+                    <li>Best Time to Buy and Sell Stock</li>
+                </ol>
+            </td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>1<sup>st</sup>June</td>
+            <td>Solve 4 problems from mentorpick</td>
+            <td></td>
+            <td>
+                <ol>
+                    <li>Count Set Bits</li>
+                    <li>Counting Bits</li>
+                    <li>Reverse Bits</li>
+                    <li>Missing Number</li>
+                </ol>
+            </td>
         </tr>
     </body>
 </table>
